# AI_CPAK

./: .dockerignore  .gitignore  .regression.py.un~  3dvis.py  Dockerfile  README.md  algo.txt  backprop.py  compare_ahka_change.py  config.py  data_viz.py  demo_main.ipynb  gui.py  kfold.ipynb  main.py  make_clusters.py  mako_d_notes.txt  new_calcs.txt  notes.txt  notes_1_30.txt  ols_ptest.py  pyproject.toml  regression.py  requirements.txt  response.json  treat_data.py  ui.py
ai_cpak/: __init__.py  data_viz.py  gui.py  main.py  regression.py
ai_cpak/data/raw/: README.md
app/: __init__.py  config.py  main.py  regression.py
app/data/treated/: README.md
app/utils/: breezypythongui.py  compare_ahka_change.py
data/pretrained/: denormalizer.h5  mlp.h5  normalizer.h5
data/raw/: README.md
data/treated/: README.md
notebooks/: demo_main.ipynb  kfold.ipynb
notes/: notes-2-13.txt
raw/: mako_data.xlsx  readme.md  whatsthis.md
related_works/: citations.txt
src/: config.py  gui.py  main.py  treat_data.py
tests/: __init__.py
treated/: morphologies.csv  readme.md
writeup_tex/: sources.bib  writeup.aux  writeup.dvi  writeup.fdb_latexmk  writeup.fls  writeup.tex
