[project]
name = "AI-CPAK"
version = "0.1.0"
authors = [
    { name="Jack Bosco", email="joseph.bosco+aicpak@gmail.com"}
]
description = "NYU Langone AI for Coronal Plane Alignment of the Knee (CPAK) Prediction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "contourpy==1.2.0",
    "cycler==0.12.1",
    "et-xmlfile==1.1.0",
    "fastapi[standard]>=0.115.12",
    "fonttools==4.47.2",
    "joblib==1.3.2",
    "kiwisolver==1.4.5",
    "mangum>=0.19.0",
    "matplotlib==3.8.2",
    "numpy==1.26.3",
    "openpyxl==3.1.2",
    "packaging==23.2",
    "pandas==2.1.4",
    "pillow==10.4.0",
    "pyparsing==3.1.1",
    "python-dateutil==2.8.2",
    "pytz==2023.3.post1",
    "scienceplots>=2.1.1",
    "scikit-learn==1.4.0",
    "scipy==1.12.0",
    "six==1.16.0",
    "threadpoolctl==3.2.0",
    "tzdata==2023.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[project.urls]
Homepage = "https://github.com/JackBosco/AI_CPAK"
